RESOLVED FIXED228600
Crash at WebCore: -[WebAccessibilityObjectWrapper _accessibilityTableAncestor].
https://bugs.webkit.org/show_bug.cgi?id=228600
Summary Crash at WebCore: -[WebAccessibilityObjectWrapper _accessibilityTableAncestor].
Andres Gonzalez
Reported 2021-07-29 12:47:12 PDT
Crash at WebCore: -[WebAccessibilityObjectWrapper _accessibilityTableAncestor].
Attachments
Patch (9.40 KB, patch)
2021-07-29 13:11 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2021-07-29 12:51:07 PDT
Andres Gonzalez
Comment 2 2021-07-29 12:53:43 PDT
50 -[WebAccessibilityObjectWrapper _accessibilityTableAncestor] 50 __64-[UIKitWebAccessibilityObjectWrapper accessibilitySortDirection]_block_invoke 50 AXPerformSafeBlockWithErrorHandler 50 -[UIKitWebAccessibilityObjectWrapper accessibilitySortDirection] 50 -[NSObject(AXPrivCategory) _iosAccessibilityAttributeValue:] 50 -[WKNSObjectAccessibility _iosAccessibilityAttributeValue:] 50 __40+[AXWebProcessGlue _initializeAXRuntime]_block_invoke 50 _copyAttributeValueCallback 50 ___AXXMIGCopyAttributeValue_block_invoke 50 _handleNonMainThreadCallback 50 _AXXMIGCopyAttributeValue 50 _XCopyAttributeValue 50 mshMIGPerform 50 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ 50 __CFRunLoopDoSource1 50 __CFRunLoopRun 50 CFRunLoopRunSpecific 50 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 50 -[NSRunLoop(NSRunLoop) run] 50 _xpc_objc_main 50 xpc_main 50 WebKit::XPCServiceMain(int, char const**) 45 start pruning: 5 WKXPCServiceMain
Andres Gonzalez
Comment 3 2021-07-29 13:11:40 PDT
EWS
Comment 4 2021-07-29 19:05:12 PDT
Committed r280464 (240099@main): <https://commits.webkit.org/240099@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434562 [details].
Note You need to log in before you can comment on or make changes to this bug.